--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -1,3 +1,8 @@
-FROM golang
+FROM golang as builder
 COPY web.go .
-CMD ["go", "run", "web.go"]
+RUN GOOS=linux GOARCH=386 go build -a ./web.go
+
+FROM scratch
+COPY --from=builder /go/ /go/
+EXPOSE 8080
+CMD ["/go/web"]
